Upgrade to Java 17: update build config, dependencies, CI workflows, and fix deprecated APIs
- Update maven.compiler.source/target from 1.8 to 17
- Upgrade logback-classic from 1.3.12 to 1.5.18
- Replace wiremock-jre8 2.35.2 with wiremock 3.13.0
- Upgrade mockito-core/junit-jupiter from 4.x to 5.18.0
- Upgrade spotless-maven-plugin from 2.30.0 to 2.44.3
- Upgrade spotbugs-maven-plugin from 4.7.3.2 to 4.9.3.0
- Upgrade pitest-maven from 1.9.8 to 1.17.4
- Upgrade pitest-junit5-plugin from 1.1.0 to 1.2.1
- Update CI workflows (build.yml, release.yml) to use Java 17
- Replace deprecated new URL() with URI.create().toURL()
- Replace URLEncoder.encode(s, String) with URLEncoder.encode(s, Charset)
- Fix JdkClient.parseUrl() to catch IllegalArgumentException from URI.create()
- Update proxy test for WireMock 3.x compatibility

Co-Authored-By: mark.o.price@gmail.com <mark.o.price@gmail.com>