@@ -3,6 +3,7 @@ package io.github.jpmorganchase.fusion.http;
 import java.io.*;
 import java.lang.invoke.MethodHandles;
 import java.net.*;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.Objects;
@@ -104,8 +105,8 @@ public class JdkClient implements Client {
 
     private URL parseUrl(String path) {
         try {
-            return new URL(path);
-        } catch (MalformedURLException e) {
+            return URI.create(path).toURL();
+        } catch (MalformedURLException | IllegalArgumentException e) {
             throw new ClientException(String.format("Malformed URL path received: %s", path), e);
         }
     }
